# xcientist

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  UI_AGENT_PROMPT.md  docker-compose.yml  install.ps1  pyproject.toml  requirements-dev.txt  requirements-gpu.txt  requirements.txt
.github/: dependabot.yml
configs/: agent_templates.yaml  bike_sharing_demand.yaml  digit_recognizer.yaml  external_resources.yaml  home_data_ml.yaml  home_data_ml_course.yaml  house_prices.yaml  hpc_allowed_allocations.json  kaggle_new_competition_smoke.yaml  long_term_roadmap.yaml  playground_s4e1.yaml  playground_series_s6e6.yaml  porto_seguro_safe_driver_prediction.yaml  ps3e1.yaml  ps3e25.yaml  ps3e7.yaml  ps4e2.yaml  ps4e3.yaml  ps4e4.yaml  ps4e6.yaml  ps4e7.yaml  ps5e1.yaml  ps5e2.yaml  ps5e3.yaml  ps5e4.yaml  ps5e5.yaml  ps6e2.yaml  ps6e3.yaml  research_sources.yaml  spaceship_titanic.yaml  store_sales_time_series_forecasting.yaml  tabular_playground_series_aug_2022.yaml  telco_churn.yaml  titanic.yaml  tps_dec2021.yaml  tps_dec2021_exp001.yaml  tps_dec2021_smoke.yaml  tps_dec2021_smoke_exp001.yaml  tps_feb2022.yaml  tps_jan2022.yaml  (+3 more)
docs/: CAPABILITY_CERTIFICATION.md  EvoMind_New_User_Final_Setup_Guide_20260707.docx  EvoMind_New_User_Final_Setup_Guide_20260707.md  EvoMind_新用户最终配置使用手册_20260707.docx  EvoMind_新用户最终配置使用手册_20260707.md  NEW_USER_ONBOARDING_GUIDE.md  RELEASE_CHECKLIST.md  kaggle_dpapi_readiness.json  kaggle_dpapi_readiness.md  training_optimization_readiness.json  training_optimization_readiness.md
prompts/: 44_DATASETS_FOR_CLAUDE.md  CLAUDE_CODE_MLEBENCH_75_WORKSTATION_HANDOFF_PROMPT.md  CLAUDE_CODE_OPUS48_MLEBENCH_75_HANDOFF_20260701.md  CLAUDE_GPU_CONNECTION_AND_DATA.md  DATA_INVENTORY_FOR_CLAUDE.md  OPUS48_PHASE2_PRODUCTION_STABILITY_AND_AUTOMATION.md  OPUS48_PHASE3_GOLD_MEDAL_FACTORY_ALL_MODALITIES.md  OPUS_SELF_EVOLUTION_GPU_LARGESCALE_HANDOFF_20260703.md  OPUS_SYSTEM_ANALYSIS_20260702.md
references/: REFERENCE_REVIEW.md
scripts/: _check_server.py  _check_v2_status.py  _check_v3_status.py  _deploy_v4.py  _dl_s3e18.py  _download_v3_results.py  _fix_nested_zips.py  _grade_v2.py  _grade_v3.py  _prep_step2.py  _prepare_new_from_zips.py  _pw.bat  _quick_check.py  _read_log.py  _read_log_v2.py  _ssh_hpc.py  _v4_clean_launch.py  _v4_data_check.py  _v4_final_launch.py  _v4_gpu_check.py  _v4_launch.py  _v4_quick.py  _v4_relaunch.py  _v4_status.py  accept_kaggle_rules.py  accept_kaggle_rules_all75.py  aliyun_hpc_bridge.py  audit_kaggle_10_task_readiness.py  audit_top30_branch_batch.py  audit_ui_backend_ready.ps1  auto_detect_competition.py  backfill_digit_recognizer_workstation_evidence.py  backfill_official_rank_gates.py  backfill_partial_task_governance.py  backfill_s6e6_recovery_governance.py  batch2_57.sh  batch2_71.sh  batch_download_kaggle.py  batch_gpu_train_v3.py  batch_test_kaggle.py  (+312 more)
specs/: mimo-ai-control-frontend-task.md
src/: .gitignore
templates/: experiment_log_template.md  research_report_template.md
tests/: conftest.py  test_agent_cli_commands.py  test_agent_context.py  test_agent_guardrails.py  test_agent_mcgs.py  test_agent_memory.py  test_agent_messaging.py  test_agent_render_wiring.py  test_agent_report.py  test_agent_resume.py  test_agent_session.py  test_agent_subagents.py  test_agent_tools.py  test_agentic_capability_benchmark.py  test_auto_detect_competition.py  test_autokaggle_cli.py  test_benchmark_manager.py  test_capability_certification.py  test_capability_evidence_bundle.py  test_capability_release_gate.py  test_credential_scanner.py  test_dashboard_source_resolution.py  test_dpapi_credential_managers.py  test_ensemble_engine.py  test_events.py  test_evolution_engine.py  (+52 more)
(+339 files in other folders)
